fix(Downloads): align icon title with material icon

--- a/src/cards/Downloads/style.scss
+++ b/src/cards/Downloads/style.scss
@@ -14,8 +14,8 @@
     .icon {
       flex-shrink: 0;
       cursor: pointer;
-      width: 38px;
-      height: 38px;
+      width: 36px;
+      height: 36px;
       margin-left: 8px;
       overflow: hidden;
       i {
